<resources>
    <string name="app_name">JustDrawIt</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="back">Back</string>
    <string name="tools">Tools</string>
    <string name="colors">Colors</string>
    <string name="settings">Settings</string>
    <string name="forward">Forward</string>
    <string name="tool_s_size">Tool`s size</string>
    <string name="pencil">Pencil</string>
    <string name="brush">Brush</string>
    <string name="save_image">Save image</string>

</resources>